--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@greymass/account-creation": "^0.1.0",
 		"@stripe/stripe-js": "^4.0.0",
 		"@wharfkit/antelope": "^1.0.8",
+		"dotenv": "^16.4.5",
 		"stripe": "^16.1.0"
 	}
 }
