--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "antelope-onboarder",
+	"name": "@greymass/account-creation-portal",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
