--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/sveltekit": "^1.4.1",
 		"@greymass/account-creation": "^0.1.0",
 		"@stripe/stripe-js": "^4.0.0",
 		"@wharfkit/antelope": "^1.0.8",
