--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/forms": "^0.5.7",
+		"@types/cookie": "^0.6.0",
 		"@types/jsonwebtoken": "^9.0.6",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.39",
@@ -33,6 +34,7 @@
 		"@greymass/account-creation": "^0.1.0",
 		"@stripe/stripe-js": "^4.0.0",
 		"@wharfkit/antelope": "^1.0.8",
+		"cookie": "^0.6.0",
 		"dotenv": "^16.4.5",
 		"jose": "^5.6.3",
 		"lucide-svelte": "^0.407.0",
